--- a/animelist.css
+++ b/animelist.css
@@ -305,18 +305,18 @@ z-index:1;
 /*********************************************/
 
 /* CONTROL MORE BUTTON */
-
 #list_surround small a {
 background: none repeat scroll 0 0 red;
-color: cyan;
+color: yellow;
 }
 
 /***************************************/
 
 /*EDIT THE EDIT BUTTON*/
-a.List_LightBox {
-background: none repeat scroll 0 0 navy !important;
-color: navy;
+
+#list_surround small a.List_LightBox {
+background: none repeat scroll 0 0 navy;
+color: cyan;
 }
 
 /******************************************/
