--- a/animelist.css
+++ b/animelist.css
@@ -285,8 +285,13 @@ z-index:1;
 
 /* CONTROL MORE BUTTON */
 #list_surround small a {
-background: none repeat scroll 0 0 red;
+background: none repeat scroll 0 0 red !important;
 color: yellow;
+}
+
+#list_surround small a:after{
+content: " OP Music";
+
 }
 
 /***************************************/
@@ -294,9 +299,14 @@ color: yellow;
 /*EDIT THE EDIT BUTTON*/
 
 #list_surround small a.List_LightBox {
-background: none repeat scroll 0 0 navy;
+background: none repeat scroll 0 0 navy !important;
 color: cyan;
 }
+
+#list_surround small a.List_LightBox:after {
+content: "";
+}
+
 
 /******************************************/
 
