--- a/animelist.css
+++ b/animelist.css
@@ -17,31 +17,15 @@ Also your image link may be broken, try uploading a new background then!
 
 body {
 background-image:
-url(http://i.imgur.com/6zD8bZR.jpg);
+url(http://i.imgur.com/LGQjtTW.jpg);
 background-attachment: fixed;
+background-size: cover;
+background-position: bottom;
 }
 
-/*
-REPOSITION MAIN BACKGROUND
-Change the position your background starts on your screen from with the two properties after "background-position" below.
-
-You replace 'center' and '43%' with two other properties, they can be any of the following: left, top, bottom, right, or center.
-
-So if you want your background to start from the center of the screen, use "center center" after background-position in the code below, replacing "center 43%".
-If you want it to start from the top and left, use "top left"
-If you want it to start from the top and center, use "top center".
-If you want it to start from the right and top, use "right top"
-If you want it to start from the right and bottom, use "right bottom"
-and so forth...
-
-Additionally, you can change "left" to a % to determine how far left or right the background starts from. For example "30% top" will start the background from the top but 30% of the pic's width from the left of the layout. You can also change top to a % to change the amount you want to start it from the top or bottom.
-*/
-
-
-body{
-background-position: top left 30%;
-}
-
+/*http://i.imgur.com/tyZzr9m.jpg (for full size)*/
+/*http://i.imgur.com/epa312J.jpg (for 1024 size)*/
+/*http://i.imgur.com/6zD8bZR.jpg*/
 
 /*
 HEADER COLOR AND FONT
@@ -49,12 +33,16 @@ These codes control the main headers' fonts and colors. Every header is above ea
 */
 
 .header_title {
-background-color:blue;
+background-color: #00007C;
 color:yellow;
-font-family: 'Franklin Gothic Medium', 'Franklin Gothic', Arial, sans-serif;
+font-family: Georgia, serif;
 font-size:48px;
+border-radius: 25px 25px 0px 0px; /*round out the corners*/
 }
 
+.category_totals {
+border-radius: 0 0 25px 25px; /* finish the rounding */
+}
 
 
 /*
@@ -75,8 +63,8 @@ This is the type and color of the anime/manga titles on your list, like Bleach, 
 
 .animetitle, .animetitle:visited {
 color:cyan;
-font-family:Verdana, Geneva, sans-serif;
-font-size:14px;
+font-family: Copperplate Gothic Light, Copperplate, serif;
+font-size: 12.5px;
 }
 
 
@@ -88,7 +76,8 @@ This is the type and color for more of the numbers, links, and words on the list
 
 .td1, .td2, a, a:visited, .category_totals, .table_header, #grand_totals, #copyright {
 color:white;
-font-family:Lucida Grande;
+font-family: Copperplate Gothic Light, Copperplate, serif;
+font-size: 11.5px;
 }
 
 
@@ -99,7 +88,7 @@ Use this to increase the width of your list!
 */
 
 #list_surround {
-width:900px;
+width: 60% !important;
 }
 
 
@@ -125,7 +114,7 @@ a:visited {
 text-decoration:none;
 }
 a:hover, a:visited:hover {
-color:red;
+color:silver;
 text-decoration:underline;
 }
 .category_totals,
@@ -147,7 +136,7 @@ border-width:0;
 padding:2px;
 }
 #copyright:after {
-content: " Custom CSS by Shishio-kun. Google 'Shishio's Custom Lists' for more designs or info.";
+border-radius: 25px 25px 25px 25px;
 }
 
 
@@ -179,6 +168,14 @@ BEGIN CUSTOMIZED PORTION
 
 /************************************************/
 
+/*ADJUST WIDTH OF SCORE BOX */
+
+.td1:nth-of-type(3), .td2:nth-of-type(3){
+width: 65px;
+}
+
+/************************************************/
+
 /* BUTTONS ON TOP*/
 
 /*
@@ -204,7 +201,7 @@ text-shadow: 0 1px rgba(255, 255, 255, 0.15);
 .status_not_selected, .status_selected {
 border: 0 none !important;
 height: auto !important;
-padding: 0 8px;
+padding: 0px 8px;
 text-align: center !important;
 width: 16.667% !important;
 }
@@ -239,16 +236,30 @@ text-shadow: 0 1px rgba(0, 0, 0, 0.3);
 
 /********************************************/
 
-/* SHIFT LIST TO THE LEFT */
+/* MAKE LIST CENTER */
 
 #list_surround {
 position: absolute !important;
-left: 1px !important;}
+margin: auto !important;
+right: 0px !important;
+left: 0px !important;}
+
+/******************************************/
+
+/*PADDING*/
+
+.status_selected:hover, .header_title:hover, .td1:hover, #grand_totals:hover,
+.status_not_selected:hover, .table_header:hover, .category_totals:hover, .td2:hover, #copyright:hover, .status_selected, .header_title, .td1, #grand_totals,
+.status_not_selected, .table_header, .category_totals, .td2, #copyright{
+padding: 10px;
+}
+
+
 
 /******************************************/
 
 /*
-TRANSISTIONS!!
+TRANSITIONS!!
 */
 .animetitle:before {
 content: "";
@@ -263,10 +274,10 @@ transition: all 0.4s ease-in-out;
 }
 
 .animetitle:hover:before {
-content: "CLICK RED MORE FOR OP MUSIC!!";
+content: "CLICK RED BUTTON FOR OP MUSIC!!";
 color: yellow;
-margin-left: 950px;
-margin-top: -50px;
+margin-left: 720px;
+margin-top: -20px;
 border-bottom-left-radius:7px;
 border-bottom-right-radius:7px;
 border-top-left-radius:7px;
@@ -283,15 +294,24 @@ z-index:1;
 
 /*********************************************/
 
-/* CONTROL MORE BUTTON */
+/* CUSTOMIZE MORE BUTTON */
 #list_surround small a {
 background: none repeat scroll 0 0 red !important;
 color: yellow;
+visibility: hidden;
+position: relative;
 }
 
 #list_surround small a:after{
-content: " OP Music";
+background: none repeat scroll 0 0 red !important;
+color: yellow;
+content: "OP Music";
+position: absolute;
+visibility: visible;
+}
 
+#list_surround small a:hover:after{
+text-decoration: underline;
 }
 
 /***************************************/
@@ -301,11 +321,14 @@ content: " OP Music";
 #list_surround small a.List_LightBox {
 background: none repeat scroll 0 0 navy !important;
 color: cyan;
+visibility: visible;
+position: absolute;
 }
 
 #list_surround small a.List_LightBox:after {
 content: "";
 }
+
 
 
 /******************************************/
@@ -314,19 +337,20 @@ content: "";
 
 .borderRBL {
 background: url("http://i.imgur.com/A4Vc9Px.png") repeat scroll 0 0 transparent !important;
-color: transparent;
-font-size: 0;
+color: transparent !important;
+font-size: 0 !important;
 height: 368px;
-left: 0px;
-right: 10px;
-padding-bottom: 0;
-padding-right: 381px;
-position: relative;
+/*left: 0px;
+position: relative;*/
 }
 .borderRBL:hover {
 background: url("http://i.imgur.com/A4Vc9Px.png") repeat scroll 0 0 black !important;
 height: 368px;
 }
+
+/**********************************************/
+
+
 
 /*******************************************/
 
@@ -339,4 +363,190 @@ width: 100% !important;
 object[classid*=":D27CDB6E-AE6D-11cf-96B8-444553540000"]:hover, object[codebase*="swflash.cab"]:hover, object[data*=".swf"]:hover, object[type="application/x-shockwave-flash"]:hover, object[src*=".swf"]:hover, embed[type="application/x-shockwave-flash"]:hover, embed[src*=".swf"]:hover, embed[allowaccess]:hover, embed[flashvars]:hover, embed[wmode]:hover {
 height: 100%;
 width: 100%;
+}
+
+/*****************************************************/
+
+/*CUSTOMIZE TOP BAR*/
+/*code was used from the fabulous MAL user shishio-kun*/
+
+/*BLUE TOP BAR*/
+
+#mal_cs_listinfo, #mal_cs_links, #mal_cs_otherlinks, #mal_cs_powered {
+    -moz-box-sizing: border-box;
+    background: none no-repeat scroll 100% 0 transparent;
+    border: none;
+    height: 0 !important;
+    overflow: hidden;
+    padding: 32px 0 0 !important;
+    position: fixed;
+    right: 4px;
+    text-align: center;
+    top: 4px;
+    transition: all 0.4s ease 0s;
+    width: 150px !important;
+    z-index: 10;
+}
+#mal_cs_listinfo:hover, #mal_cs_links:hover, #mal_cs_otherlinks:hover, #mal_cs_powered:hover {
+    height: 200px !important;
+    padding-top: 32px !important;
+}
+#mal_cs_listinfo div, #mal_cs_links div, #mal_cs_otherlinks div, #mal_cs_powered div, #mal_cs_powered dd {
+    background-color: rgba(12, 125, 196, 0.6);
+    border-radius: 3px 0 0 0;
+    font-size: 0 !important;
+    line-height: 0;
+    margin: 0 !important;
+    opacity: 0;
+    padding: 8px 0 0 !important;
+    transition: opacity 0.4s ease-in-out 0s;
+}
+#mal_cs_listinfo:hover div, #mal_cs_links:hover div, #mal_cs_otherlinks:hover div, #mal_cs_powered:hover div, #mal_cs_powered:hover dd {
+    opacity: 1;
+}
+#mal_cs_listinfo div:nth-of-type(2), #mal_cs_links div:nth-of-type(2), #mal_cs_otherlinks div:nth-of-type(2), #mal_cs_powered div:nth-of-type(2) {
+    border-radius: 0 0 3px 3px;
+    padding: 4px 0 8px !important;
+}
+#mal_cs_listinfo a, #mal_cs_links a, #mal_cs_otherlinks a, #mal_cs_powered a {
+    background-color: rgba(12, 46, 196, 0.6) !important;
+    border-radius: 3px 3px 3px 3px !important;
+    border-style: solid !important;
+    border-width: 1px !important;
+    display: block;
+    font: 13px/17px 'Arial',sans-serif !important;
+    margin: 4px 12px 0;
+    padding: 3px 0 !important;
+    text-decoration: none;
+}
+#mal_cs_listinfo a:nth-of-type(1), #mal_cs_links a:nth-of-type(1), #mal_cs_otherlinks a:nth-of-type(1), #mal_cs_powered a:nth-of-type(1) {
+    margin-top: 0;
+}
+#mal_cs_listinfo a:hover, #mal_cs_links a:hover, #mal_cs_otherlinks a:hover {
+    background-color: rgba(38, 135, 252, 0.6) !important;
+    color: white !important;
+    text-shadow: 0 0 0 black !important;
+    border-color: white !important;
+}
+#mal_cs_listinfo strong a strong {
+    font-weight: normal;
+}
+#mal_cs_otherlinks strong {
+    color: #333333;
+    display: block;
+    font: bold 13px/17px 'Arial',sans-serif !important;
+    padding: 0 4px 4px;
+    text-shadow: 0 1px 1px #FFFFFF;
+}
+#mal_cs_otherlinks strong a {
+    background: none repeat scroll 0 0 transparent !important;
+    border-radius: 0 0 0 0;
+    color: #333333;
+    display: inline;
+    font: bold 13px/17px 'Arial',sans-serif !important;
+    margin: 0;
+    padding: 0;
+    text-shadow: 0 1px 1px #FFFFFF;
+}
+#mal_cs_powered a {
+    background-color: rgba(12, 125, 196, 0.6) !important;
+    border: medium none;
+    border-radius: 3px 0 0 0 !important;
+    display: block !important;
+    margin: 0 !important;
+    opacity: 0;
+    padding: 8px 0 !important;
+}
+#mal_cs_powered:hover a {
+    opacity: 1;
+}
+#mal_cs_powered a img {
+    background: url("http://i.imgur.com/fGTjBC3.png") no-repeat scroll 50% 6px rgba(12, 46, 196, 0.6);
+    border-radius: 3px 3px 3px 3px;
+    display: block;
+    height: 0;
+    margin: 0 12px;
+    padding: 23px 0 0 126px;
+    transition: all 0.25s ease-in-out 0s;
+    width: 0;
+}
+#mal_cs_powered a img:hover {
+    background-color: rgba(12, 46, 196, 0.3);
+}
+#mal_cs_powered #search {
+    border-radius: 0 0 3px 3px;
+    padding: 8px !important;
+    position: relative;
+}
+#searchBox {
+    -moz-box-sizing: border-box;
+    border-color: #BCBCBC #D6D6D6 #D6D6D6;
+    border-radius: 2px 2px 2px 2px;
+    border-style: solid;
+    border-width: 1px;
+    color: #333333;
+    display: inline-block;
+    font-family: arial,sans-serif;
+    font-size: 13px;
+    height: 28px;
+    padding-left: 6px !important;
+    padding-right: 24px !important;
+    vertical-align: top;
+    width: 100px;
+}
+#searchBox:hover, #searchBox:focus {
+    border-color: #ACACAC #C6C6C6 #C6C6C6;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1) inset;
+}
+#searchListButton {
+    background: url("http://i.imgur.com/XqsilHp.png") no-repeat scroll 0 0 transparent !important;
+    border-radius: 3px 3px 3px 3px;
+    height: 0;
+    margin: 0;
+    padding: 16px 0 0 19px !important;
+    position: absolute;
+    right: 12px !important;
+    top: 14px !important;
+    width: 0;
+}
+#mal_cs_listinfo {
+    background-image: url("http://i48.tinypic.com/33omjrb.png");
+    right: 106px;
+}
+#mal_cs_listinfo:hover {
+    background-image: url("http://i.imgur.com/VcVVnod.png");
+}
+#mal_cs_links {
+    background-image: url("http://i46.tinypic.com/25ptfm1.png");
+    right: 72px !important;
+    z-index: 9;
+}
+#mal_cs_links:hover {
+    background-image: url("http://i.imgur.com/oPfKrOl.png");
+}
+#mal_cs_otherlinks {
+    background-image: url("http://i50.tinypic.com/2eknk01.png");
+    right: 38px !important;
+    z-index: 8;
+}
+#mal_cs_otherlinks:hover {
+    background-image: url("http://i.imgur.com/EEGHkbF.png");
+}
+#mal_cs_powered {
+    background-image: url("http://i45.tinypic.com/2lvipah.png");
+    position: fixed !important;
+    right: 4px !important;
+    z-index: 7;
+}
+#mal_cs_powered:hover {
+    background-image: url("http://i.imgur.com/TUUWtaj.png");
+}
+# {
+    background: none repeat scroll 0 0 transparent !important;
+}
+#mal_cs_pic img {
+    display: none;
+}
+#mal_cs_pic, #mal_cs_listinfo, #mal_cs_links {
+    border-right: 0 none !important;
 }
